# libspatialindex-bulkloading-points

./: CMakeLists.txt  MyDataStream.h  MyVisitor.h  Point.cpp  Point.h  README.md  main.cpp
cmake/: FindSpatialIndex.cmake
massif/: massif.out.12508
